<resources>
    <string name="app_name">Homie</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_courses">My Courses</string>
    <string name="my_assignments">My Assignments</string>
    <string name="all_courses">All Courses</string>
    <string name="all_assignments">All Assignments</string>
    <string name="assignment_no">Assignment %1$d</string>
    <string name="deadline">Deadline: %1$s</string>
    <string name="title_activity_navigaion">NavigaionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string-array name="spinner_group">
        <item>Add</item>
        <item>Remove</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_edit_assignment">Edit Assignments</string>
    <string name="title_activity_edit_task">Edit Assignments</string>
    <string name="title_activity_task_list">Task List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ass_no_hint">Assignment No.</string>
    <string name="ass_days_assess_hint">Days Assessment</string>
    <string name="ass_deadline_hint">Deadline</string>
    <string name="ass_date_hint">Date</string>
    <string name="ass_time_hint">Time</string>
    <string name="todo_title">To Do</string>
    <string name="in_process_title">In Process</string>
    <string name="done_title">Done</string>
    <string name="days_assessment">%1$s days</string>
    <string name="ass_name">%1$s : Assignment %2$d</string>
    <string name="date_format">%1$te/%1$tm/%1$tY</string>
    <string name="task_name">%1$s</string>
    <string name="task_title_hint">Title</string>
    <string name="task_status_hint">Status</string>
    <string name="task_processing_user_hint">Processing user</string>
    <string name="task_description_hint">Decription</string>
    <string name="task_days_assess_hint">Days assessment</string>
    <string name="task_status">%1$d</string>
    <string name="new_task">New Task</string>
    <string name="msg_task_added">Task was added successfuly</string>
    <string name="msg_error_auth">Error authenticating user. Please login and retry</string>
    <string name="msg_server_down">The server is not responding. Please retry later</string>
    <string name="msg_assignment_added">Assignment was added successfuly</string>
    <string name="ass_menu_item_tasks">Tasks</string>
    <string name="ass_menu_item_edit">Edit</string>
    <string name="ass_menu_item_group">Group</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="group_members">Group Members: %s</string>
    <string name="add_user_hint">Insert User</string>
    <string name="send">Send</string>
</resources>
