<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="task"
            type="finalproject.homie.DO.Task">
        </variable>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@{@string/task_name(task.title)}"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/task_title_hint"
                android:layout_gravity="end|center"
                android:textAlignment="textEnd"
                />

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title_hint"
                android:text="@{String.valueOf(task.title)}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/task_status_hint"
                android:layout_gravity="center|end"
                android:textAlignment="textEnd"
                />
            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/task_processing_user_hint"
                android:layout_gravity="end|center"
                android:textAlignment="textEnd"
                />
            <Spinner
                android:id="@+id/spnrProcessingUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_processing_user_hint"
                android:spinnerMode="dialog"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/task_days_assess_hint"
                android:layout_gravity="end|center"
                android:textAlignment="textEnd"
                />
            <EditText
                android:id="@+id/txtDaysAssessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_days_assess_hint"
                android:text="@{String.valueOf(task.daysAssessment)}"
                android:inputType="number"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/task_description_hint"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                />
            <EditText
                android:id="@+id/txtDescription"
                android:lines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(task.description)}"
                />
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>
</layout>