<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="assignment"
            type="finalproject.homie.DO.Assignment">
        </variable>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@{@string/ass_name(assignment.relatedCourse.name, assignment.number)}"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ass_no_hint"
                android:layout_gravity="end|center"
                android:textAlignment="textEnd"
                />

            <EditText
                android:id="@+id/txtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ass_no_hint"
                android:text="@{String.valueOf(assignment.number)}"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ass_no_hint"
                android:layout_gravity="center|end"
                android:textAlignment="textEnd"
                />
            <EditText
                android:id="@+id/txtDeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ass_deadline_hint"
                android:inputType="date"
                android:text="@{@string/date_format(assignment.deadline)}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ass_days_assess_hint"
                android:layout_gravity="end|center"
                android:textAlignment="textEnd"
                />
            <EditText
                android:id="@+id/txtDateAssessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ass_days_assess_hint"
                android:inputType="number"
                android:text="@{String.valueOf(assignment.daysAssessment)}"
                />

        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>
</layout>